tests/expected_invalid_failing_match_wrong_reason_variant.diag.out
<input>:18:9: error: failed(...) arm must match a variant of reason 'ParseFailure'
            failed(Different) => 2,
            ^^^^^^^^^^^^^^^^^
